Correção de datilografia

--- a/assets/css/root.css
+++ b/assets/css/root.css
@@ -2,7 +2,7 @@
 
 :root {
   --font-family-main: "Bricolage Grotesque", sans-serif;
-  --font-weigth-main: 500;
+  --font-weight-main: 500;
   --font-family-content: "Bricolage Grotesque", serif;
   --font-weight-content: 500;
   --font-family-summary: "Bricolage Grotesque", serif;
